Fix migrations for UnitOfWork and separate entities configurations

--- a/ClinicManagement/appsettings.Development.json
+++ b/ClinicManagement/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "ClinicDev":  "Server=.\\SQLEXPRESS;Database=clinicdb;Trusted_Connection=True"
+    "ClinicDev":  "Server=.\\SQLEXPRESS;Database=ClinicDb;Trusted_Connection=True"
   }
 }
